- removed underline from anchors - added about section - fixed a bug with text overlapping navbar

--- a/src/components/navbar/navbar.module.sass
+++ b/src/components/navbar/navbar.module.sass
@@ -3,6 +3,7 @@
     position: fixed
     width: 100%
     padding: 1rem
+    background: #FFFFFF
     box-shadow: .0625rem .0625rem .5rem rgba(0, 0, 0, 0.1)
 
 .contentBox
@@ -25,6 +26,7 @@
     list-style-type: none
 
     a
+        text-decoration: none
         cursor: pointer
 
     h2
